add page text (close #26)
