# docs/swagger.json
@@ -76,7 +76,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/answer.Answer"
+                                "$ref": "#/definitions/output.Answer"
                             }
                         }
                     }
@@ -121,7 +121,23 @@
         }
     },
     "definitions": {
-        "answer.Answer": {
+        "gnvers.Version": {
+            "description": "Version provides information about the version of an application.",
+            "type": "object",
+            "properties": {
+                "build": {
+                    "description": "Build contains the timestamp or other details\nindicating when the app was compiled.",
+                    "type": "string",
+                    "example": "2023-08-03_18:58:38UTC"
+                },
+                "version": {
+                    "description": "Version specifies the version of the app, usually in the v0.0.0 format.",
+                    "type": "string",
+                    "example": "v1.0.2"
+                }
+            }
+        },
+        "output.Answer": {
             "description": "Answer holds the metadata and results for a query response, containing the pages from BHL that answer a given question.",
             "type": "object",
             "properties": {
@@ -129,7 +145,7 @@
                     "description": "Meta contains metadata about the request.",
                     "allOf": [
                         {
-                            "$ref": "#/definitions/answer.Meta"
+                            "$ref": "#/definitions/output.Meta"
                         }
                     ]
                 },
@@ -137,7 +153,7 @@
                     "description": "Results is a list of pages containing the answers.",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/answer.Result"
+                        "$ref": "#/definitions/output.Result"
                     }
                 },
                 "summary": {
@@ -146,7 +162,7 @@
                 }
             }
         },
-        "answer.Meta": {
+        "output.Meta": {
             "description": "Meta includes information such as the time taken to process the query.",
             "type": "object",
             "properties": {
@@ -177,7 +193,7 @@
                 }
             }
         },
-        "answer.Result": {
+        "output.Result": {
             "description": "Result holds information about a BHL page or range of pages that contain answers to a given question.",
             "type": "object",
             "properties": {
@@ -188,7 +204,7 @@
                 "crossScore": {
                     "description": "CrossScore is generated by Cross-Embeding during comparison\nof the question with results. It is used for sorting results.",
                     "type": "number",
-                    "example": 0.02353212
+                    "example": 0.92353212
                 },
                 "itemId": {
                     "description": "ItemID is the ID of a BHL Item, such as a book\nor journal volume.",
@@ -200,7 +216,7 @@
                     "type": "string"
                 },
                 "outlink": {
-                    "description": "Outlink is the URL pointing to the BHL website\nfor PageIDStart.",
+                    "description": "Outlink is the URL pointing to the BHL web page\nfor PageID.",
                     "type": "string",
                     "example": "https://www.biodiversitylibrary.org/page/53469262"
                 },
@@ -208,22 +224,25 @@
                     "description": "OutlinkTitleDOI is the DOI of the item's title.",
                     "type": "string"
                 },
-                "pageEnd": {
-                    "description": "PageIDEnd is the ID of the ending page of the answer.\nIt's the same as PageIDStart if the answer is on one page.",
+                "pageId": {
+                    "description": "PageID is the ID of the first page of the answer.",
                     "type": "integer",
                     "example": 53469262
                 },
-                "pageStart": {
-                    "description": "PageIDStart is the ID of the starting page of the answer.",
+                "pageIndex": {
+                    "description": "PageIndex is the index of the starting page of the answer.",
                     "type": "integer",
-                    "example": 53469262
+                    "example": 2
                 },
-                "pageText": {
-                    "description": "PageText is the text of a page with the answer.",
-                    "type": "string"
+                "pages": {
+                    "description": "PageIDs is a list of IDs of pages in the Item.\nExample:\t[53469262, 53469263, 53469264, 53469265, 53469266]",
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "reference": {
-                    "description": "RefString is the string representation of the BHL reference.",
+                    "description": "Reference is the string representation of the BHL reference.",
                     "type": "string"
                 },
                 "score": {
@@ -232,24 +251,11 @@
                     "example": 0.7505834773704542
                 },
                 "text": {
-                    "description": "TextExt contains more text that Text, allowing to create\na better summary.",
-                    "type": "string"
-                }
-            }
-        },
-        "gnvers.Version": {
-            "description": "Version provides information about the version of an application.",
-            "type": "object",
-            "properties": {
-                "build": {
-                    "description": "Build contains the timestamp or other details\nindicating when the app was compiled.",
-                    "type": "string",
-                    "example": "2023-08-03_18:58:38UTC"
-                },
-                "version": {
-                    "description": "Version specifies the version of the app, usually in the v0.0.0 format.",
-                    "type": "string",
-                    "example": "v1.0.2"
+                    "description": "TextPages is the text from pages of the chunk.",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
